<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="nigt_theme">Темная тема</string>
    <string name="back_button">Кнопка назад</string>
    <string name="link_to_android_course">https://practicum.yandex.ru/android-developer</string>
    <string name="recipient_email">akimova.oki@ya.ru</string>
    <string name="subject_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_term_of_use"> https://yandex.ru/legal/practicum_offer/</string>
    <string name="play_btn_dscr">play</string>
    <string name="pause_btn_dscr">pause</string>
    <string name="like_btn_dscr">like</string>
    <string name="add_to_playlist_btn_dscr">add to playlist</string>
    <string name="start_timing_mm_ss">00:00</string>

    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="colectionname">Альбом</string>
    <string name="track_time">Длительность</string>
    <string name="track_time_30sek"> 0:30</string>


    <string name="trackNameDescr">название трека</string>
    <string name="trackAlbumDescr">изображение альбома</string>
    <string name="arrowForwardDescr">кнопка перейти хз куда</string>
    <string name="no_results_search">Ничего не нашлось</string>
    <string name="server_error">Проблемы со связью</string>
    <string name="server_error2">Загрузка не удалась.Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="mediateka">Медиатека</string>
    <string name="mediateka_empty_text">Ваша медиатека пуста</string>
    <string name="mediateka_playlist">Вы не создали \n не одного плейлиста</string>
    <string name="mediateka_new_playlist">Новый плейлист</string>
    <string name="mediateka_favorite_tracks_tablayout">Избранные треки</string>
    <string name="mediateka_playlists_tablayout">Плейлисты</string>

    <string name="new_playlist_title_text">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="description_new_playlist">Описание</string>
    <string name="name_new_playlist">Название*</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="end_create_new_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finished">Завершить</string>

    <plurals name="plurals">
        <item quantity="zero">минут</item>
        <item quantity="one"> минута</item>
        <item quantity="two"> минуты</item>
        <item quantity="few"> минуты</item>
        <item quantity="many"> минут</item>
        <item quantity="other"> минут</item>
    </plurals>

    <plurals name="plurals_tracks">
        <item quantity="zero">треков</item>
        <item quantity="one"> трек</item>
        <item quantity="two"> трека</item>
        <item quantity="few"> трека</item>
        <item quantity="many"> треков</item>
        <item quantity="other"> трек</item>
    </plurals>

    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_question">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>

    <string name="dont_have_a_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="share_pl_list_fr">Поделиться</string>
    <string name="change_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="delete_playlist_question">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="empty_playlist">Плейлист пуст.</string>

</resources>