<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/settings_btn_title_icon"
            android:contentDescription="@string/back_button"
            app:icon="@drawable/back_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_mini_icons"
            app:iconSize="48dp"
            tools:ignore="RtlHardcoded,VisualLintButtonSize,VisualLintBounds,TouchTargetSizeCheck" />

        <TextView
            style="@style/settings_btn_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <Switch
        android:id="@+id/night_theme_switch_settings"
        style="@style/settings_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        android:padding="@dimen/padding"
        android:text="@string/nigt_theme"
        tools:ignore="ExtraText,UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <Button
        android:id="@+id/share_button_settings"
        style="@style/settings_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:text="@string/share"
        app:icon="@drawable/light_mode_share"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/write_to_support_button"
        style="@style/settings_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:text="@string/support"
        app:icon="@drawable/light_mode_support"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/terms_of_use_button"
        style="@style/settings_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:text="@string/terms_of_use"
        app:icon="@drawable/light_mode_arrow_forward"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>

