<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding16">

    <TextView
        style="@style/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size26"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        style="@style/main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button_main"
            style="@style/main_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top18"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/search"
            app:cornerRadius="@dimen/dp16"
            app:icon="@drawable/light_mode_search"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/mediateka_button"
            style="@style/main_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top18"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/media_library"
            app:cornerRadius="@dimen/dp16"
            app:icon="@drawable/light_mode_mediateka"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/settings_button"
            style="@style/main_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top18"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/settings"
            app:cornerRadius="@dimen/dp16"
            app:icon="@drawable/light_mode_settings"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</LinearLayout>