<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/day_night_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/settings_title"
        style="@style/settings_btn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:paddingStart="@dimen/dp12"
        android:paddingTop="@dimen/dp12"
        android:layout_marginTop="4dp"
        android:paddingBottom="@dimen/dp24"
        android:text="@string/settings"
        android:textSize="@dimen/tittle_text_size22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dark_theme_text_view"
        style="@style/settings_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="@dimen/padding16"
        android:text="@string/nigt_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/night_theme_switch_settings"
        style="@style/settings_btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:useMaterialThemeColors="false" />

    <TextView
        android:id="@+id/share_text_view"
        style="@style/settings_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="@dimen/padding16"
        android:paddingTop="@dimen/dp19"
        android:paddingBottom="@dimen/margin_top18"
        android:text="@string/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dark_theme_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/share_button_settings"
        style="@style/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/dp8"
        android:contentDescription="@string/share"
        android:drawableEnd="@drawable/light_mode_share"
        app:layout_constraintBottom_toBottomOf="@id/share_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/night_theme_switch_settings"
        app:layout_constraintTop_toTopOf="@id/share_text_view" />

    <TextView
        android:id="@+id/write_to_support_text_view"
        style="@style/settings_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="@dimen/padding16"
        android:paddingTop="@dimen/dp19"
        android:paddingBottom="@dimen/margin_top18"
        android:text="@string/support"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/write_to_support_button"
        style="@style/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp8"
        android:contentDescription="@string/support"
        android:drawableEnd="@drawable/light_mode_support"
        app:layout_constraintBottom_toBottomOf="@id/write_to_support_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/write_to_support_text_view" />

    <TextView
        android:id="@+id/terms_of_use_text_view"
        style="@style/settings_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="@dimen/padding16"
        android:paddingTop="@dimen/dp19"
        android:paddingBottom="@dimen/margin_top18"
        android:text="@string/terms_of_use"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/write_to_support_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/terms_of_use_button"
        style="@style/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp8"
        android:contentDescription="@string/terms_of_use"
        android:drawableEnd="@drawable/light_mode_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/terms_of_use_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/terms_of_use_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>