<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/sever_error_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/server_error_image"
        style="@style/server_error_placeholder"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/no_results_search"
        app:layout_constraintBottom_toTopOf="@id/server_error1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/padding16"
         />

    <TextView
        android:id="@+id/server_error1"
        style="@style/server_error_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/no_results_search"
        android:textSize="@dimen/sp19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/server_error2"
        style="@style/server_error_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_horizontal|top"
        android:paddingStart="@dimen/dp24"
        android:paddingEnd="@dimen/dp16"
        android:text="@string/server_error2"
        android:textSize="@dimen/sp19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/server_error1" />

    <Button
        android:id="@+id/update_search_server_error"
        style="@style/black_white_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp24"
        android:paddingStart="@dimen/padding16"
        android:paddingEnd="@dimen/padding16"
        android:text="@string/update"
        android:textSize="@dimen/mini_text_size16"
        app:cornerRadius="@dimen/dp24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/server_error2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>