<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        />

    <Button
        android:id="@+id/back_button_audio_player"
        style="@style/settings_btn_title_icon"
        android:contentDescription="@string/back_button"
        app:icon="@drawable/back_icon"
        app:iconGravity="textStart"
        app:iconSize="@dimen/dp48"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTag="back_btn"
        tools:ignore="MissingConstraints,RtlHardcoded,TouchTargetSizeCheck,VisualLintBounds,VisualLintButtonSize" />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_tags="back_btn" />
    <ImageView
        android:id="@+id/track_album_image_player"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/trackAlbumDescr"
        android:maxWidth="512dp"
        android:maxHeight="512dp"
        android:paddingBottom="@dimen/dp24"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/textsBarrier0"
        app:layout_constraintBottom_toTopOf="@id/textsBarrier01"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:gravity="center"
        tools:ignore="ContentDescription" />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:barrierDirection="top"
        app:constraint_referenced_tags="track_artist_name_tag" />

    <TextView
        style="@style/white_at_night_black_at_day_medium"
        android:id="@+id/album_big_text_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:paddingTop="@dimen/dp24"
        android:textSize="@dimen/tittle_text_size22"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/track_album_image_player"
        tools:text="Альбом"
        app:layout_constraintTag="track_artist_name_tag"/>

    <TextView
        style="@style/white_at_night_black_at_day_medium"
        android:id="@+id/track_artist_player"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp12"
        android:paddingBottom="@dimen/dp12"

        android:textSize="@dimen/sp14"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="artist_name"
        app:layout_constraintTop_toBottomOf="@id/album_big_text_player"
        tools:text="Исполнитель" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:layout_constraintWidth_percent=".6"
        app:constraint_referenced_tags="artist_name"
     />

    <ImageView
        style="@style/btn_add_to_playlist"
        android:layout_width="51dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toTopOf="@id/textsBarrier"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/textsBarrier1"
        tools:ignore="ImageContrastCheck" />
    <ImageView
        android:id="@+id/play_icon"
        style="@style/btn_play_player"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/textsBarrier"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/textsBarrier1"

        />

    <ImageView
        style="@style/btn_like_playlist"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:contentDescription=""
        app:layout_constraintBottom_toTopOf="@id/textsBarrier"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/textsBarrier1"
        tools:ignore="ImageContrastCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/track_time_30sek"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/play_icon"
        app:layout_constraintBottom_toTopOf="@+id/textsBarrier"

        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:barrierDirection="top"
        app:constraint_referenced_tags="track_time_text_vie_tag" />

    <TextView
        android:id="@+id/track_time_text_view"
        style="@style/color_rv_search_small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:fontFamily="@font/ys_display_regular"
        android:paddingTop="@dimen/dp9"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/track_time"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toTopOf="@id/collection_name_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="track_time_text_vie_tag"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/collection_name_text_view"
        android:textColor="@color/text_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:fontFamily="@font/ys_display_regular"
        android:paddingTop="@dimen/dp9"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/colectionname"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toTopOf="@id/year_text_view"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/year_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:fontFamily="@font/ys_display_regular"
        android:paddingTop="@dimen/dp9"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/year"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toTopOf="@id/genre_text_view"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/genre_text_view"
        android:textColor="@color/text_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"

        android:fontFamily="@font/ys_display_regular"
        android:paddingTop="@dimen/dp9"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/genre"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toTopOf="@id/country_text_view"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/country_text_view"
        android:textColor="@color/text_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp20"

        android:fontFamily="@font/ys_display_regular"
        android:paddingTop="@dimen/dp9"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/country"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/track_time"
      android:textColor="@color/text_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:fontFamily="@font/ys_display_regular"
        android:paddingTop="@dimen/dp9"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/track_time"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toTopOf="@id/collection_name_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="track_time_result"
        tools:ignore="TextContrastCheck"

        />

    <TextView
        android:id="@+id/track_time_mediapl"
style="@style/white_at_night_black_at_day_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"

        android:paddingTop="@dimen/dp9"
        android:paddingEnd="@dimen/dp16"
        android:paddingBottom="@dimen/dp8"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toTopOf="@id/collection_name_player"
        app:layout_constraintEnd_toEndOf="parent"

        tools:text="Длительность"

        />

    <TextView
        style="@style/white_at_night_black_at_day_regular"
        android:id="@+id/collection_name_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:maxLines="1"
        android:paddingTop="@dimen/dp9"
        android:paddingEnd="@dimen/dp16"
        android:paddingBottom="@dimen/dp8"

        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toTopOf="@id/year_text_player"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry,TextContrastCheck"
        tools:text="Альбом" />

    <TextView
        style="@style/white_at_night_black_at_day_regular"
        android:id="@+id/year_text_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"

        android:paddingTop="@dimen/dp9"
        android:paddingEnd="@dimen/dp16"
        android:paddingBottom="@dimen/dp8"
        android:textSize="@dimen/sp13"

        app:layout_constraintBottom_toTopOf="@id/genre_text_player"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Год"

        tools:ignore="RtlSymmetry" />

    <TextView
        style="@style/white_at_night_black_at_day_regular"
        android:id="@+id/genre_text_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"

        android:paddingTop="@dimen/dp9"
        android:paddingEnd="@dimen/dp16"
        android:paddingBottom="@dimen/dp8"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toTopOf="@id/country_text_player"
        app:layout_constraintEnd_toEndOf="parent"

        tools:text="Жанр"
        tools:ignore="RtlSymmetry" />

    <TextView
        style="@style/white_at_night_black_at_day_regular"
        android:id="@+id/country_text_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp20"

        android:paddingTop="@dimen/dp9"
        android:paddingEnd="@dimen/dp16"
        android:paddingBottom="@dimen/dp8"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        tools:text="Страна"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>